Fix watermark zindex overlapping modal
I have no idea why I had put the watermark inside the top tray...makes no sense.

--- a/src/app.sass
+++ b/src/app.sass
@@ -129,7 +129,7 @@ header
   z-index: 100
 
 
-#TrayTop .watermark
+#TrayLeft .watermark
   position: fixed
   display: block
   left: 122px
@@ -140,7 +140,7 @@ header
   font-family: 'comfortaa'
   transition: color .45s, opacity .3s
   cursor: crosshair
-  z-index: 1000
+  z-index: 10
 
   &:hover
     color: hsl(278, 100%, 75%)
